# python-charlcd

./: .gitignore  Makefile  pyproject.toml
src/charlcd/: __init__.py  debug.py
